--- a/workshop-hub/requirements.yaml
+++ b/workshop-hub/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
   - name: jupyterhub
-    version: 0.8.2
+    version: 0.8.2 # 0.9.1 for integration in digital oceans
     repository: https://jupyterhub.github.io/helm-chart
